implement user access request
